--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.1.4",
     "gatsby-cli": "^2.4.10",
     "gatsby-image": "^2.0.22",
+    "gatsby-plugin-dark-mode": "^1.1.0",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-mailchimp": "^5.1.2",
@@ -24,6 +25,7 @@
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-prismjs": "^3.0.0",
+    "gatsby-remark-reading-time": "^1.0.1",
     "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.2",
@@ -34,9 +36,10 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.7.0",
     "react-share": "^3.0.0",
+    "react-toggle": "^4.0.2",
     "react-typography": "^0.16.13",
-    "sharp": "^0.21.3",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
     "typography": "^0.16.17",
@@ -46,7 +49,8 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.11.1",
     "gatsby-remark-code-titles": "^1.0.2",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "sharp": "^0.21.3"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
