--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-cli": "^2.4.10",
     "gatsby-image": "^2.0.22",
     "gatsby-plugin-dark-mode": "^1.1.0",
+    "gatsby-plugin-draft": "0.0.5",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-mailchimp": "^5.1.2",
