--- a/package.json
+++ b/package.json
@@ -8,50 +8,50 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "gatsby": "^2.1.4",
-    "gatsby-cli": "^2.4.10",
-    "gatsby-image": "^2.0.22",
-    "gatsby-plugin-dark-mode": "^1.1.0",
-    "gatsby-plugin-draft": "0.0.5",
-    "gatsby-plugin-feed": "^2.0.8",
-    "gatsby-plugin-google-analytics": "^2.0.5",
-    "gatsby-plugin-mailchimp": "^5.1.2",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.1.12",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-plugin-sitemap": "^2.2.9",
-    "gatsby-plugin-typography": "^2.2.0",
-    "gatsby-remark-copy-linked-files": "^2.0.5",
-    "gatsby-remark-images": "^2.0.4",
-    "gatsby-remark-prismjs": "^3.0.0",
-    "gatsby-remark-reading-time": "^1.0.1",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
-    "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-source-filesystem": "^2.0.2",
-    "gatsby-transformer-remark": "^2.1.6",
-    "gatsby-transformer-sharp": "^2.1.13",
-    "node-sass": "^4.12.0",
-    "prismjs": "^1.15.0",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.7.0",
-    "react-share": "^3.0.0",
-    "react-toggle": "^4.0.2",
-    "react-typography": "^0.16.13",
-    "typeface-merriweather": "0.0.43",
-    "typeface-montserrat": "0.0.43",
-    "typography": "^0.16.17",
-    "typography-theme-wordpress-2016": "^0.15.10"
+    "gatsby": "^3.12.1",
+    "gatsby-cli": "^3.12.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-dark-mode": "^1.1.2",
+    "gatsby-plugin-draft": "^0.2.0",
+    "gatsby-plugin-feed": "^3.12.0",
+    "gatsby-plugin-google-analytics": "^3.12.0",
+    "gatsby-plugin-mailchimp": "^5.2.2",
+    "gatsby-plugin-manifest": "^3.12.0",
+    "gatsby-plugin-offline": "^4.12.0",
+    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-sass": "^4.12.0",
+    "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-plugin-sitemap": "^4.8.0",
+    "gatsby-plugin-typography": "^3.12.0",
+    "gatsby-remark-copy-linked-files": "^4.9.0",
+    "gatsby-remark-images": "^5.9.0",
+    "gatsby-remark-prismjs": "^5.9.0",
+    "gatsby-remark-reading-time": "^1.1.0",
+    "gatsby-remark-responsive-iframe": "^4.9.0",
+    "gatsby-remark-smartypants": "^4.9.0",
+    "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-remark": "^4.9.0",
+    "gatsby-transformer-sharp": "^3.12.0",
+    "node-sass": "^6.0.1",
+    "prismjs": "^1.24.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-share": "^4.4.0",
+    "react-toggle": "^4.1.2",
+    "react-typography": "^0.16.20",
+    "typeface-merriweather": "^1.1.13",
+    "typeface-montserrat": "^1.1.13",
+    "typography": "^0.16.21",
+    "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.11.1",
-    "gatsby-remark-code-titles": "^1.0.2",
+    "gatsby-remark-code-titles": "^1.1.0",
     "prettier": "^1.14.2",
-    "sharp": "^0.25.3"
+    "sharp": "^0.29.0"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
