--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^4.9.0",
     "gatsby-remark-smartypants": "^4.9.0",
+    "gatsby-remark-stackblitz": "^0.1.0",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-remark": "^4.9.0",
     "gatsby-transformer-sharp": "^3.12.0",
