--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-draft": "^0.2.0",
-    "gatsby-plugin-feed": "^3.12.0",
+    "gatsby-plugin-feed": "^3.14.0",
     "gatsby-plugin-google-analytics": "^3.12.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^3.12.0",
@@ -65,6 +65,7 @@
   },
   "scripts": {
     "dev": "gatsby develop",
+    "serve": "gatsby serve",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
